# field-service-dispatch-optimizer

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  tasks.ps1
.github/workflows/: ci.yml
.playwright-mcp/: page-2026-06-30T00-28-10-929Z.yml  page-2026-06-30T00-28-46-805Z.yml  page-2026-06-30T00-29-01-900Z.yml
backend/: Dockerfile
backend/app/: config.py  db.py  generator.py  main.py  models.py  repository.py  routing.py  schemas.py  serialize.py  solve_service.py  sweep_service.py
backend/optimizer/: baseline.py  cost.py  cp_sat_model.py  domain.py  metrics.py  transform.py  travel.py
backend/sql/: analytical_views.sql
backend/tests/: conftest.py  test_api.py  test_baseline.py  test_cost.py  test_cp_sat.py  test_diagnostics.py  test_domain.py  test_generator.py  test_metrics.py  test_persistence.py  test_routing.py  test_sweep.py  test_transform.py  test_travel.py
data-generator/: generate_synthetic_data.py
deploy/: RUNBOOK.md  dispatch-api.service  dispatch-web.service  nginx.conf
docs/: architecture.md  case-study.md  data-dictionary.md  optimization-model.md
docs/superpowers/plans/: 2026-06-29-field-service-dispatch-optimizer.md
docs/superpowers/specs/: 2026-06-29-field-service-dispatch-optimizer-design.md  2026-06-30-marginal-value-of-capacity-design.md  2026-06-30-ui-ux-refresh-design.md
frontend/: Dockerfile  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/capacity/: page.tsx
frontend/app/compare/: page.tsx
frontend/app/constraints/: page.tsx
frontend/app/results/: page.tsx
frontend/components/: CapacityCharts.tsx  Charts.tsx  ControlPanel.tsx  EmptyState.tsx  FrontierChart.tsx  Header.tsx  LeafletMap.tsx  MapView.tsx  MetricCard.tsx  RegionMap.tsx  RoutingSettings.tsx  ThemeToggle.tsx  chartTheme.ts
frontend/lib/: api.ts  format.ts
(+2 files in other folders)
