[project]
name = "field-service-dispatch-optimizer"
version = "0.1.0"
description = "Live field-service dispatch optimizer (OR-Tools CP-SAT) with baseline comparison"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ortools>=9.10",
    "sqlalchemy>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
