[project]
name = "field-service-dispatch-optimizer"
version = "0.1.0"
description = "Live field-service dispatch optimizer (OR-Tools CP-SAT) with baseline comparison"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ortools>=9.10",
    "sqlalchemy>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]  # line length is enforced loosely; long SQL/strings are fine

[tool.ruff.lint.per-file-ignores]
# conftest sets DATABASE_URL before importing app modules — imports must follow.
"backend/tests/conftest.py" = ["E402"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
